--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.1",
     "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.2.2",
@@ -29,6 +30,7 @@
     "@ngrx/store-devtools": "^7.2.0",
     "@types/uuid": "^3.4.4",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
