--- a/package.json
+++ b/package.json
@@ -32,19 +32,22 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.3.3",
+    "ngx-auth-firebaseui": "^3.4.1",
+    "promise-polyfill": "^8.1.3",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.0",
+    "@angular/cli": "^8.3.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
