--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.4",
-    "@angular/cdk": "~7.2.2",
-    "@angular/common": "~8.2.4",
-    "@angular/compiler": "~8.2.4",
-    "@angular/core": "~8.2.4",
+    "@angular/animations": "~9.0.0-next.4",
+    "@angular/cdk": "~8.1.4",
+    "@angular/common": "~9.0.0-next.4",
+    "@angular/compiler": "~9.0.0-next.4",
+    "@angular/core": "~9.0.0-next.4",
     "@angular/fire": "^5.1.1",
     "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "~8.2.4",
-    "@angular/material": "^7.2.2",
-    "@angular/platform-browser": "~8.2.4",
-    "@angular/platform-browser-dynamic": "~8.2.4",
-    "@angular/router": "~8.2.4",
+    "@angular/forms": "~9.0.0-next.4",
+    "@angular/material": "^8.1.4",
+    "@angular/platform-browser": "~9.0.0-next.4",
+    "@angular/platform-browser-dynamic": "~9.0.0-next.4",
+    "@angular/router": "~9.0.0-next.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.2.0",
     "@ngrx/router-store": "^7.2.0",
@@ -38,13 +38,13 @@
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "^8.3.2",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular/language-service": "~8.2.4",
+    "@angular/compiler-cli": "~9.0.0-next.4",
+    "@angular/language-service": "~9.0.0-next.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
