--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "~9.0.0-next.4",
     "@angular/compiler": "~9.0.0-next.4",
     "@angular/core": "~9.0.0-next.4",
-    "@angular/fire": "^5.1.1",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~9.0.0-next.4",
     "@angular/material": "^8.1.4",
@@ -30,18 +30,16 @@
     "@ngrx/store-devtools": "^7.2.0",
     "@types/uuid": "^3.4.4",
     "core-js": "^2.5.4",
-    "firebase": "^5.8.4",
+    "firebase": "^6.5.0",
     "hammerjs": "^2.0.8",
     "ngx-auth-firebaseui": "^3.4.1",
-    "promise-polyfill": "^8.1.3",
     "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.803.2",
     "@angular/cli": "^8.3.2",
     "@angular/compiler-cli": "~9.0.0-next.4",
     "@angular/language-service": "~9.0.0-next.4",
@@ -62,3 +60,4 @@
     "typescript": "~3.5.3"
   }
 }
+  
